<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cardview_light_background"
    android:orientation="vertical"
    android:padding="26dp">

    <TextView
        android:id="@+id/textViewDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="Report new location"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold" />

<!--    &lt;!&ndash; Place Name &ndash;&gt;-->
    <!--    <com.google.android.material.textfield.TextInputLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginBottom="10dp"-->
    <!--        android:hint="@string/place_name">-->

    <!--        <com.google.android.material.textfield.TextInputEditText-->
    <!--            android:id="@+id/editTextName"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content" />-->

    <!--    </com.google.android.material.textfield.TextInputLayout>-->

    <!-- Date and Time -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/select_date_and_time"
            android:inputType="datetime" />
    </com.google.android.material.textfield.TextInputLayout>
    <!-- Place Type -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/select_type"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroupType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonControl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:checked="true"
            android:text="@string/control" />

        <RadioButton
            android:id="@+id/radioButtonPatrol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/patrol" />

        <RadioButton
            android:id="@+id/radioButtonRadar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/radar" />

        <RadioButton
            android:id="@+id/radioButtonCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera" />

    </RadioGroup>

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDiscard"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:text="@string/discard" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/add" />

    </LinearLayout>

</LinearLayout>
